// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textfield rendering tests renders correctly in the disabled state 1`] = `
<Fragment>
  <label
    className="ml-5 text-gray-400 "
    htmlFor="txt"
  >
    txt
  </label>
  <br />
  <div
    className="inline-block px-5 py-2 mt-1 rounded text-gray-400 cursor-not-allowed bg-none border-2 border-gray-300 "
    onClick={[Function]}
  >
    <div
      className="flex items-center"
    >
      <input
        className="bg-transparent focus:outline-none w-full"
        disabled={true}
        id="txt"
        name="txt"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`textfield rendering tests renders correctly in the error state 1`] = `
<Fragment>
  <label
    className="ml-5 text-red-600 "
    htmlFor="txt"
  >
    txt
  </label>
  <br />
  <div
    className="inline-block px-5 py-2 mt-1 rounded text-gray-600 cursor-text bg-none border-2 border-red-500 border-2 focus-within:border-brand focus-within:ring-4 ring-brand ring-opacity-50"
    onClick={[Function]}
  >
    <div
      className="flex items-center"
    >
      <input
        className="bg-transparent focus:outline-none w-full"
        id="txt"
        name="txt"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`textfield rendering tests renders correctly in the solid state 1`] = `
<Fragment>
  <label
    className="ml-5 text-gray-400 "
    htmlFor="txt"
  >
    txt
  </label>
  <br />
  <div
    className="inline-block px-5 py-2 mt-1 rounded text-gray-600 cursor-text bg-gray-200 border-gray-300 focus-within:ring-4 ring-brand ring-opacity-50"
    onClick={[Function]}
  >
    <div
      className="flex items-center"
    >
      <input
        className="bg-transparent focus:outline-none w-full"
        id="txt"
        name="txt"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`textfield rendering tests renders correctly with base props 1`] = `
<Fragment>
  <label
    className="ml-5 text-gray-400 "
    htmlFor="txt"
  >
    txt
  </label>
  <br />
  <div
    className="inline-block px-5 py-2 mt-1 rounded text-gray-600 cursor-text bg-none border-2 border-gray-300 focus-within:border-brand focus-within:ring-4 ring-brand ring-opacity-50"
    onClick={[Function]}
  >
    <div
      className="flex items-center"
    >
      <input
        className="bg-transparent focus:outline-none w-full"
        id="txt"
        name="txt"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`textfield rendering tests renders correctly with helper text 1`] = `
<Fragment>
  <label
    className="ml-5 text-gray-400 "
    htmlFor="txt"
  >
    txt
  </label>
  <br />
  <div
    className="inline-block px-5 py-2 mt-1 rounded text-gray-600 cursor-text bg-none border-2 border-gray-300 focus-within:border-brand focus-within:ring-4 ring-brand ring-opacity-50"
    onClick={[Function]}
  >
    <div
      className="flex items-center"
    >
      <input
        className="bg-transparent focus:outline-none w-full"
        id="txt"
        name="txt"
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <label
    className="block ml-5 text-gray-400"
    htmlFor="txt"
  >
    txt
  </label>
</Fragment>
`;
